--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.5"
+    "mongodb": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
