--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
     "mongodb": "^5.8.0"
   },
   "devDependencies": {
